@@ -63,5 +63,5 @@ see pexpand(1) and psort(1)
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-bgraph(1), igraph(1), imagew(1), mx80(1), pexpand(1),
+bgraph(1), igraph(1), imagew(1), meta2bmp(1), mx80(1), pexpand(1),
 psort(1), ra_t8(1), t4014(1)
