@@ -20,7 +20,8 @@ common = mfio.o syscalls.o misc.o
 PROGS = $(DESTDIR)/meta2tga $(DESTDIR)/pexpand $(DESTDIR)/psort \
 	$(DESTDIR)/cv $(DESTDIR)/psmeta $(DESTDIR)/plotin \
 	$(DESTDIR)/x11meta $(DESTDIR)/bgraph $(DESTDIR)/igraph \
-	$(DESTDIR)/dgraph $(DESTDIR)/gcomp $(DESTDIR)/plot4
+	$(DESTDIR)/dgraph $(DESTDIR)/gcomp $(DESTDIR)/plot4 \
+	$(DESTDIR)/meta2bmp
 
 # global targets
 all: $(PROGS)
@@ -35,6 +36,10 @@ clean:
 
 $(DESTDIR)/meta2tga:	meta2tga.o rplot.o plot.o palloc.o
 	$(CC) $(CFLAGS) -o meta2tga meta2tga.o rplot.o plot.o $(common) \
+palloc.o -lrt $(MLIB)
+
+$(DESTDIR)/meta2bmp:	meta2bmp.o rplot.o plot.o palloc.o
+	$(CC) $(CFLAGS) -o meta2bmp meta2bmp.o rplot.o plot.o $(common) \
 palloc.o -lrt $(MLIB)
 
 $(DESTDIR)/x11meta:	xmeta.o x11plot.o plot.o palloc.o
@@ -101,7 +106,7 @@ $(DESTDIR)/gcomp:	gcomp.o gcalc.o mgvars.o
 -lrt $(MLIB)
 
 # dependencies
-$(DESTDIR)/meta2tga $(DESTDIR)/x11meta \
+$(DESTDIR)/meta2tga $(DESTDIR)/meta2bmp $(DESTDIR)/x11meta \
 $(DESTDIR)/pexpand $(DESTDIR)/plot4 $(DESTDIR)/psort $(DESTDIR)/mtext \
 $(DESTDIR)/plotin ../lib/libmeta.a psmeta:	$(common)
 
@@ -113,10 +118,11 @@ mgraph.o:	mgraph.h
 
 misc.o syscalls.o mfio.o hfio.o cvhfio.o palloc.o segment.o sort.o expand.o \
 plot.o mplot.o primout.o psort.o pexpand.o cv.o mtext.o plot4.o \
-xmeta.o metacalls.o meta2tga.o rplot.o:	meta.h ../common/rterror.h
+xmeta.o metacalls.o meta2tga.o \
+meta2bmp.o rplot.o:	meta.h ../common/rterror.h
 
-plot.o mplot.o meta2tga.o rplot.o:	plot.h
+plot.o mplot.o meta2tga.o meta2bmp.o rplot.o:	plot.h
 
 mplot.o:	span.h
 
-rplot.o meta2tga.o:	rast.h
+rplot.o meta2bmp.o meta2tga.o:	rast.h
